# manager_backend/api.py
@@ -9,6 +9,7 @@ from .features.proxies.routes import router as proxies_router
 from .features.settings.routes import router as settings_router
 from .features.extensions.routes import router as extensions_router
 from .features.diagnostics.routes import router as diagnostics_router
+from .features.resources.routes import router as resources_router
 from .dependencies import require_authenticated_session
 from .schemas.common import ErrorEnvelope
 
@@ -31,3 +32,4 @@ api_router.include_router(proxies_router)
 api_router.include_router(settings_router)
 api_router.include_router(extensions_router)
 api_router.include_router(diagnostics_router)
+api_router.include_router(resources_router)
